add react testing library, add tests for button, sidebar

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,10 @@
     "compilerOptions": {
       "module": "CommonJS"
     }
-  }
+  },
+  "include": [
+    "src/**/*",
+    "./config/jest/setup-tests.ts"
+  ],
+  "exclude": ["node_modules", "src/**/*.spec.ts"]
 }
