--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.17.5",
+    "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.21.0",
     "@svgr/webpack": "^6.2.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.5",
     "@types/jest": "^27.5.2",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.0",
+    "@types/webpack-bundle-analyzer": "^4.6.0",
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "babel-loader": "^8.2.3",
@@ -40,9 +44,11 @@
     "eslint-plugin-react": "^7.32.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "mini-css-extract-plugin": "^2.5.3",
     "postcss-lit": "^1.0.1",
+    "regenerator-runtime": "^0.13.11",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
@@ -54,6 +60,7 @@
     "ts-node": "^10.5.0",
     "typescript": "^4.9.5",
     "webpack": "^5.69.1",
+    "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
   },
