--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
     "test:unit": "jest --config ./config/jest/jest.config.ts",
     "test:ui": "npx loki test",
+    "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
     "test:ui:ok": "npx loki approve",
     "sb": "start-storybook -p 6006 -c ./config/storybook",
-    "sb:bild": "build-storybook -c ./config/storybook"
+    "sb:build": "build-storybook -c ./config/storybook"
   },
   "keywords": [],
   "author": "",
