--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,10 @@ on:
     branches: [ master ]
 jobs:
   pipeline:
-    runs-on: ${{ matrix.os }}
+    runs-on: windows-2019
     strategy:
       matrix:
-        os: [ ubuntu-latest ]
+        os: [ windows-2019 ]
         node-version: [ 17.x ]
 
     steps:
