--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,5 +40,4 @@ jobs:
         if: always()
         
       - name: screenshot testing
-        run: npm run test:ui:ci
-        if: always() 
+        run: npm run test:ui:ok
