--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,4 +40,4 @@ jobs:
         if: always()
         
       - name: screenshot testing
-        run: npm run test:ui:ok
+        run: npm run test:ui:ci
