--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:ui:json": "node scripts/generate-visual-json-report.js",
     "test:ui:html": "reg-cli --from .loki/report.json --report .loki/report.html",
     "test:ui:report": "npm run test:ui:json && npm run test:ui:html",
-    "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
+    "test:ui:ci": "build-storybook -c ./config/storybook && npx loki --requireReference --reactUri file:./storybook-static --chromeFlags=--headless --no-sandbox",    
     "test:ui:ok": "npx loki approve",
     "sb": "start-storybook -p 6006 -c ./config/storybook",
     "sb:build": "build-storybook -c ./config/storybook"
